Added a proper title

--- a/shapes.html
+++ b/shapes.html
@@ -12,7 +12,12 @@
 </head>
 
 <body>
-<header>The Roche lobe is the region of space around a star in a binary system within which orbiting material is gravitationally bound to that star.</header>
+<header>
+	<h1>Roche Lobe</h1>
+	<p>
+		The Roche lobe is the region of space around a star in a binary system within which orbiting material is gravitationally bound to that star.
+	</p>
+</header>
 <div id="roche-lobe">
 	<div id="roche-lobe-left"><div id="zero-age-main-sequence-star"></div></div>
 	<div id="roche-lobe-right"></div>
